--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html {
 }
 body {
   background-color: #313131;
-  color: #3b3b3b;
+  color: ##3b3b3b;
   font-size: 14px;
   font-weight: 300;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
