--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html {
 }
 body {
   background-color: #313131;
-  color: ##3b3b3b;
+  color: #3b3b3b;
   font-size: 14px;
   font-weight: 300;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
@@ -122,7 +122,7 @@ footer a {
 }
 
 .headline span {
-  background-color: #f5f6f8;
+  background-color: #3b3b3b;
   border-radius: 5px;
   padding: 6px;
   margin-left: 12px;
@@ -228,7 +228,7 @@ footer a {
 }
 
 .nodata {
-  background-color: #f8f8f8;
+  background-color: #3b3b3b;
   color: #ccc;
 }
 
