--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html {
   flex-direction: column;
 }
 body {
-  background-color: #313131;
+  background-color: #f5f6f8;
   color: #3b3b3b;
   font-size: 14px;
   font-weight: 300;
@@ -122,7 +122,7 @@ footer a {
 }
 
 .headline span {
-  background-color: #3b3b3b;
+  background-color: #f5f6f8;
   border-radius: 5px;
   padding: 6px;
   margin-left: 12px;
@@ -228,7 +228,7 @@ footer a {
 }
 
 .nodata {
-  background-color: #3b3b3b;
+  background-color: #f8f8f8;
   color: #ccc;
 }
 
