--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ a {
 .outlineButton,
 .button,
 button {
-  background-color: #194b7d;
+  background-color: #3b3b3b;
   border: none;
   border-radius: 8px;
   color: white;
