--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ footer a {
 }
 
 .headline span {
-  background-color: #2e2e2e;
+  background-color: #d600ab;
   border-radius: 5px;
   padding: 6px;
   margin-left: 12px;
