--- a/index.css
+++ b/index.css
@@ -39,39 +39,39 @@ textarea,
 }
 
 h1 {
-  color: #3b3b3b;
+  color: #007e04;
   font-size: 32px;
   font-weight: bold;
   margin: 0px;
 }
 h2 {
-  color: #3b3b3b;
+  color: #007e04;
   font-size: 28px;
   font-weight: bold;
   margin: 16px 0 8px 0;
 }
 h3 {
-  color: #3b3b3b;
+  color: #007e04;
   font-size: 24px;
   font-weight: 700;
   margin: 8px 0 4px 0;
 }
 h4 {
-  color: #3b3b3b;
+  color: #007e04;
   font-size: 18px;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: 4px;
 }
 h5 {
-  color: #3b3b3b;
+  color: #007e04;
   font-size: 16px;
   font-weight: bold;
   margin-top: 5px;
   margin-bottom: 4px;
 }
 h6 {
-  color: #3b3b3b;
+  color: #007e04;
   font-size: 16px;
   font-weight: bold;
   margin-top: 5px;
