--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html {
   flex-direction: column;
 }
 body {
-  background-color: #2e2e2e;
+  background-color: #242526;
   color: #3b3b3b;
   font-size: 14px;
   font-weight: 300;
@@ -88,7 +88,7 @@ button {
   background-color: #3b3b3b;
   border: none;
   border-radius: 8px;
-  color: white;
+  color: rgb(0, 126, 4);
   cursor: pointer;
   font-size: 16px;
   font-weight: 600;
@@ -107,7 +107,7 @@ footer a {
 
 .pageContainer {
   padding: 30px 50px;
-  background-color: #2e2e2e;
+  background-color: #242526;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
   max-width: 900px;
@@ -166,10 +166,6 @@ footer a {
 }
 
 .sectionUrl {
-    background-color: #d600ab
-    border-radius: 5px;
-    padding: 6px;
-    margin-left: 12px;
     font-size: 14px;
 }
 
