--- a/index.css
+++ b/index.css
@@ -137,7 +137,7 @@ footer a {
 }
 
 .statusContainer {
-  border: 1px solid #ededed;
+  border: 1px solid #707070;
   border-radius: 5px;
   padding-top: 20px;
   text-align: left;
