--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html {
   flex-direction: column;
 }
 body {
-  background-color: #242526;
+  background-color: #f5f6f8;
   color: #3b3b3b;
   font-size: 14px;
   font-weight: 300;
@@ -39,39 +39,39 @@ textarea,
 }
 
 h1 {
-  color: #007e04;
+  color: #3b3b3b;
   font-size: 32px;
   font-weight: bold;
   margin: 0px;
 }
 h2 {
-  color: #007e04;
+  color: #3b3b3b;
   font-size: 28px;
   font-weight: bold;
   margin: 16px 0 8px 0;
 }
 h3 {
-  color: #007e04;
+  color: #3b3b3b;
   font-size: 24px;
   font-weight: 700;
   margin: 8px 0 4px 0;
 }
 h4 {
-  color: #007e04;
+  color: #3b3b3b;
   font-size: 18px;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: 4px;
 }
 h5 {
-  color: #007e04;
+  color: #3b3b3b;
   font-size: 16px;
   font-weight: bold;
   margin-top: 5px;
   margin-bottom: 4px;
 }
 h6 {
-  color: #007e04;
+  color: #3b3b3b;
   font-size: 16px;
   font-weight: bold;
   margin-top: 5px;
@@ -85,10 +85,10 @@ a {
 .outlineButton,
 .button,
 button {
-  background-color: #3b3b3b;
+  background-color: #194b7d;
   border: none;
   border-radius: 8px;
-  color: rgb(0, 126, 4);
+  color: white;
   cursor: pointer;
   font-size: 16px;
   font-weight: 600;
@@ -107,7 +107,7 @@ footer a {
 
 .pageContainer {
   padding: 30px 50px;
-  background-color: #242526;
+  background-color: #fff;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
   max-width: 900px;
@@ -122,7 +122,7 @@ footer a {
 }
 
 .headline span {
-  background-color: #d600ab;
+  background-color: #f5f6f8;
   border-radius: 5px;
   padding: 6px;
   margin-left: 12px;
@@ -137,7 +137,7 @@ footer a {
 }
 
 .statusContainer {
-  border: 1px solid #707070;
+  border: 1px solid #ededed;
   border-radius: 5px;
   padding-top: 20px;
   text-align: left;
@@ -166,7 +166,7 @@ footer a {
 }
 
 .sectionUrl {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .statusTitle {
